basic animals implementation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><kbd>Q</kbd>/<kbd>E</kbd> to turn (no mouse)</li>
           <li><kbd>SPACE</kbd> to jump/remove objects</li>
           <li><kbd>B</kbd> to build</li>
-          <li><kbd>1</kbd>-<kbd>3</kbd> to select objects</li>
+          <li><kbd>1</kbd>-<kbd>6</kbd> to select objects/animals</li>
           <li><kbd>ESC</kbd> to release mouse</li>
         </ul>
       </section>
