break up into clear file names

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </aside>
   </main>
 
-  <!-- Game script -->
-  <script src="script.js" defer></script>
+  <!-- Game script (bundled version for direct browser usage) -->
+  <script src="bundle.js" defer></script>
 </body>
 </html>
