better ghosts, object rotations, sepepration between interior and world objects and animals

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
           <li>Click game to use mouse look</li>
           <li><kbd>WASD</kbd> or <kbd>↑↓←→</kbd> to move</li>
-          <li><kbd>Q</kbd>/<kbd>E</kbd> to turn (no mouse)</li>
+          <li><kbd>Q</kbd>/<kbd>E</kbd> to rotate objects/turn camera</li>
           <li><kbd>SPACE</kbd> to jump/remove objects</li>
           <li><kbd>B</kbd> to build</li>
           <li><kbd>1</kbd>-<kbd>6</kbd> to select objects/animals</li>
