--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li><kbd>SPACE</kbd> to jump/remove objects</li>
           <li><kbd>B</kbd> to build</li>
           <li><kbd>1</kbd>-<kbd>6</kbd> to select objects/animals</li>
+          <li><kbd>F5</kbd> save / <kbd>F9</kbd> load game</li>
           <li><kbd>ESC</kbd> to release mouse</li>
         </ul>
       </section>
